--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="light" lang="en">
+<html class="light" lang="es">
   <head>
     <meta charset="utf-8" />
     <title>TypeScript Business Rules</title>
